--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
     <div class="block" draggable="true">Break</div>
   </div>
 
+  <div class="custom-task">
+    <h3>Create Your Own Study Block</h3>
+    <input type="text" id="customTaskInput" placeholder="e.g. History project" />
+    <button onclick="addCustomBlock()">Add</button>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
-
