--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
   <h1>Evening Study Planner</h1>
 
-  <div id="planner"></div>
+  <!-- ✅ Fixed table structure with correct ID -->
+  <table id="schedule" class="grid">
+    <tr>
+      <th class="label">Time</th>
+      <th class="label">Monday</th>
+      <th class="label">Tuesday</th>
+      <th class="label">Wednesday</th>
+      <th class="label">Thursday</th>
+    </tr>
+  </table>
 
   <div class="blocks">
     <h3>Drag to Study Hall</h3>
